adds thumbnails for faster laod

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -161,19 +161,24 @@ img.hover-shadow {
 
 <div class="row">
   <div class="column">
-    <img src="me.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
-    <img src="laptop.jpg" style="width:100%" onclick="openModal();currentSlide(6)" class="hover-shadow cursor">
+    <img src="thumbnail/me.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+    <img src="thumbnail/windmill.jpg" style="width:100%" onclick="openModal();currentSlide(6)" class="hover-shadow cursor">
+    <img src="thumbnail/fire.jpg" style="width:100%" onclick="openModal();currentSlide(8)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="foot.jpg" style="width:100%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
-    <img src="seven11.jpg" style="width:100%" onclick="openModal();currentSlide(7)" class="hover-shadow cursor">
+    <img src="thumbnail/foot.jpg" style="width:100%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
+    <img src="thumbnail/seven11.jpg" style="width:100%" onclick="openModal();currentSlide(7)" class="hover-shadow cursor">
+    <img src="thumbnail/laptop.jpg" style="width:100%" onclick="openModal();currentSlide(9)" class="hover-shadow cursor">
+    <img src="thumbnail/shoes.jpg" style="width:100%" onclick="openModal();currentSlide(12)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="witch.jpg" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
+    <img src="thumbnail/witch.jpg" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
+    <img src="thumbnail/selfport.jpg" style="width:100%" onclick="openModal();currentSlide(10)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="negspace.jpg" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
-    <img src="shells.jpg" style="width:100%" onclick="openModal();currentSlide(5)" class="hover-shadow cursor">
+    <img src="thumbnail/negspace.jpg" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
+    <img src="thumbnail/shells.jpg" style="width:100%" onclick="openModal();currentSlide(5)" class="hover-shadow cursor">
+    <img src="thumbnail/cranes.jpg" style="width:100%" onclick="openModal();currentSlide(11)" class="hover-shadow cursor">
   </div>
 </div>
 
@@ -212,6 +217,26 @@ img.hover-shadow {
     <div class="mySlides">
       <div class="numbertext">7</div>
       <img src="seven11.jpg" style="width: 100%">
+    </div>
+  <div class="mySlides">
+      <div class="numbertext">8</div>
+      <img src="fire.jpg" class="portraitimg">
+    </div>
+  <div class="mySlides">
+      <div class="numbertext">9</div>
+      <img src="windmill.jpg" class="portraitimg">
+    </div>
+  <div class="mySlides">
+      <div class="numbertext">10</div>
+      <img src="selfport.jpg" class="portraitimg">
+    </div>
+  <div class="mySlides">
+      <div class="numbertext">11</div>
+      <img src="cranes.jpg" class="portraitimg">
+    </div>
+   <div class="mySlides">
+      <div class="numbertext">12</div>
+      <img src="shoes.jpg" class="portraitimg">
     </div>
 
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
