adds acrylic self portrait

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -164,6 +164,7 @@ img.hover-shadow {
     <img src="thumbnail/me.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
     <img src="thumbnail/windmill.jpg" style="width:100%" onclick="openModal();currentSlide(9)" class="hover-shadow cursor">
     <img src="thumbnail/fire.jpg" style="width:100%" onclick="openModal();currentSlide(8)" class="hover-shadow cursor">
+    <img src="thumbnail/self_acr.jpg" style="width:100%" onclick="openModal();currentSlide(13)" class="hover-shadow cursor">
   </div>
   <div class="column">
     <img src="thumbnail/foot.jpg" style="width:100%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
@@ -238,7 +239,10 @@ img.hover-shadow {
       <div class="numbertext">12</div>
       <img src="shoes.jpg" class="portraitimg">
     </div>
-
+   <div class="mySlides">
+      <div class="numbertext">13</div>
+      <img src="self_acr.jpg" style="width: 100%">
+    </div>
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
