adds more paintings to portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -175,6 +175,8 @@ img.hover-shadow {
   <div class="column">
     <img src="thumbnail/witch.jpg" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
     <img src="thumbnail/selfport.jpg" style="width:100%" onclick="openModal();currentSlide(10)" class="hover-shadow cursor">
+    <img src="thumbnail/bubbles.jpg" style="width:100%" onclick="openModal();currentSlide(14)" class="hover-shadow cursor">
+    <img src="thumbnail/panel.jpg" style="width:100%" onclick="openModal();currentSlide(14)" class="hover-shadow cursor">
   </div>
   <div class="column">
     <img src="thumbnail/negspace.jpg" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
@@ -242,6 +244,14 @@ img.hover-shadow {
    <div class="mySlides">
       <div class="numbertext">13</div>
       <img src="self_acr.jpg" style="width: 100%">
+    </div>
+   <div class="mySlides">
+      <div class="numbertext">14</div>
+      <img src="bubbles.jpg" style="width: 100%">
+    </div>
+   <div class="mySlides">
+      <div class="numbertext">15</div>
+      <img src="panel.jpg" style="width: 100%">
     </div>
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
