moving stuff around

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -161,10 +161,10 @@ img.hover-shadow {
 
 <div class="row">
   <div class="column">
-    <img src="thumbnail/me.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+    <img src="thumbnail/self_acr.jpg" style="width:100%" onclick="openModal();currentSlide(13)" class="hover-shadow cursor">
     <img src="thumbnail/windmill.jpg" style="width:100%" onclick="openModal();currentSlide(9)" class="hover-shadow cursor">
     <img src="thumbnail/fire.jpg" style="width:100%" onclick="openModal();currentSlide(8)" class="hover-shadow cursor">
-    <img src="thumbnail/self_acr.jpg" style="width:100%" onclick="openModal();currentSlide(13)" class="hover-shadow cursor">
+    <img src="thumbnail/me.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
   </div>
   <div class="column">
     <img src="thumbnail/foot.jpg" style="width:100%" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
@@ -176,11 +176,12 @@ img.hover-shadow {
     <img src="thumbnail/witch.jpg" style="width:100%" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
     <img src="thumbnail/selfport.jpg" style="width:100%" onclick="openModal();currentSlide(10)" class="hover-shadow cursor">
     <img src="thumbnail/bubbles.jpg" style="width:100%" onclick="openModal();currentSlide(14)" class="hover-shadow cursor">
-    <img src="thumbnail/panel.jpg" style="width:100%" onclick="openModal();currentSlide(14)" class="hover-shadow cursor">
+    <img src="thumbnail/shells.jpg" style="width:100%" onclick="openModal();currentSlide(5)" class="hover-shadow cursor">
   </div>
   <div class="column">
     <img src="thumbnail/negspace.jpg" style="width:100%" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
-    <img src="thumbnail/shells.jpg" style="width:100%" onclick="openModal();currentSlide(5)" class="hover-shadow cursor">
+    <img src="thumbnail/panel.jpg" style="width:100%" onclick="openModal();currentSlide(15)" class="hover-shadow cursor">
+  </div>
     <img src="thumbnail/cranes.jpg" style="width:100%" onclick="openModal();currentSlide(11)" class="hover-shadow cursor">
   </div>
 </div>
