--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -247,11 +247,11 @@ img.hover-shadow {
     </div>
    <div class="mySlides">
       <div class="numbertext">14</div>
-      <img src="bubbles.jpg" style="width: 100%">
+      <img src="bubbles.jpg" class="portraitimg">
     </div>
    <div class="mySlides">
       <div class="numbertext">15</div>
-      <img src="panel.jpg" style="width: 100%">
+      <img src="panel.jpg" class="portraitimg">
     </div>
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
     <a class="next" onclick="plusSlides(1)">&#10095;</a>
