--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -159,6 +159,7 @@ img.hover-shadow {
 
 <h2>Portfolio</h2>
 
+<a href="./portfolio.pdf">Key</a>
 <div class="row">
   <div class="column">
     <img src="thumbnail/self_acr.jpg" style="width:100%" onclick="openModal();currentSlide(13)" class="hover-shadow cursor">
